--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
 #content {
      margin-left: 20px;
 }
+
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+
+.overlay {
+    position:absolute; 
+	min-width: 100%;
+	min-height: 100%;
+}
+
+
+	
