--- a/style.css
+++ b/style.css
@@ -13,9 +13,29 @@
 
 .overlay {
     position:absolute; 
-	min-width: 100%;
+	min-width: 99%;
 	min-height: 100%;
 }
 
+.btn-xl {
+    padding: 5px 15px;
+    font-size: 50px;
+    border-radius: 20px;
+    border-width: 2px;
+	margin-right:25%;
+}
+
+.icon {
+	max-width:35%;
+	margin-left:60%;
+}
+
+.Bigtext {
+	font-size: 400%;
+}
+
+.footer {
+	padding-top:17%;
+}
 
 	
