--- a/style.css
+++ b/style.css
@@ -48,3 +48,23 @@ body {
 .col-md-3 {
 	padding-top:3%;
 }
+
+#clue {
+	text-align: center;
+}
+
+#center {
+	text-align: center;
+}
+
+#end {
+	text-align: center;
+}
+
+#end1 {
+	text-align: center;
+}
+
+#end2 {
+	text-align: center;
+}
